--- a/DartScoreboard-main/index.html
+++ b/DartScoreboard-main/index.html
@@ -17,23 +17,25 @@
         <div class="score">
             0
         </div>
+    </div>
+    <div class="container2">
         <div class="scoring">
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="20"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="19"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="18"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="17"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="16"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="15"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="14"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="13"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="12"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="11"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="10"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="25"></li>
             </ol>
         </div>
-    </div>
+    
     <div class="points">
         <ol>
             <li>20</li>
@@ -50,6 +52,7 @@
             <li>Bull</li>
         </ol>
     </div>
+</div>
 </body>
 <script src="script.js" defer></script>
 </html>
