--- a/DartScoreboard-main/index.html
+++ b/DartScoreboard-main/index.html
@@ -13,27 +13,34 @@
     <div class="container">
         <div class="player">
             <h2>Player 1</h2>
+            <div class="score" id="player1Score">0</div>
+                0
+            </div>
         </div>
-        <div class="score">
-            0
+        <div class="player">
+            <h2>Player 2</h2>
+            <div class="score" id="player2Score">0</div>
+                0
+            </div>
         </div>
     </div>
     <div class="container2">
         <div class="scoring">
             <ol>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="20"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="19"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="18"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="17"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="16"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="15"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="14"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="13"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="12"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="11"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="10"></li>
-                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="25"></li>
-            </ol>
+                <!-- Add the "player1" prefix to alt attributes for player 1 -->
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-20"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-19"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-18"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-17"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-16"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-15"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-14"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-13"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-12"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-11"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-10"></li>
+                <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player1-25"></li>
+              </ol>
         </div>
     
     <div class="points">
@@ -51,6 +58,24 @@
             <li>10</li>
             <li>Bull</li>
         </ol>
+    </div>
+
+    <div class="scoring">
+        <ol>
+            <!-- Add the "player2" prefix to alt attributes for player 2 -->
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-20"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-19"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-18"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-17"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-16"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-15"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-14"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-13"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-12"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-11"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-10"></li>
+            <li onclick="changeImage(this)"><img src="/img/minus.png" alt="player2-25"></li>
+          </ol>
     </div>
 </div>
 </body>
